--- a/nos_custom_report/report/nos_sale_order_template.xml
+++ b/nos_custom_report/report/nos_sale_order_template.xml
@@ -5,14 +5,13 @@
         <t t-call="web.html_container">
             <t t-foreach="docs" t-as="doc">
                 <t t-call="web.external_layout">
-                    <Center>
+                    <div class="text-center">
                         <h3 class="mt-4">
                             <span t-if="env.context.get('proforma', False) or is_pro_forma">Pro-Forma Invoice</span>
                             <span t-elif="doc.state in ['draft','sent']">Quotation</span>
                             <span t-else="">Sales Order</span>
-<!--                            <span t-field="doc.name">SO0000</span>-->
                         </h3>
-                    </Center>
+                    </div>
                     <br/>
                     <br/>
                     <div class="container o_text_columns">
@@ -64,7 +63,6 @@
 
                         <div class="oe_structure"/>
                         <table class="table table-sm mt-4">
-<!--                        <table class="table table-sm o_main_table table-borderless mt-4">-->
                             <!-- In case we want to repeat the header, remove "display: table-row-group" -->
                             <thead style="display: table-row-group">
                                 <tr>
@@ -76,7 +74,6 @@
                                     <th name="th_discount" t-if="display_discount" class="text-end">
                                         <span>Discount</span>
                                     </th>
-<!--                                    <th name="th_taxes" class="text-end">Taxes</th>-->
                                     <th name="th_subtotal" class="text-end">
                                         <span>Amount</span>
                                     </th>
@@ -97,21 +94,15 @@
                                                 <span t-field="line.product_uom_qty">3</span>
                                                 <span t-field="line.product_uom">units</span>
                                                 <span t-if="line.product_packaging_id">
-                                                    (<span t-field="line.product_packaging_qty" t-options="{&quot;widget&quot;: &quot;integer&quot;}"/> <span t-field="line.product_packaging_id"/>)
+                                                    (<span t-field="line.product_packaging_qty" t-options='{"widget": "integer"}'/> <span t-field="line.product_packaging_id"/>)
                                                 </span>
                                             </td>
                                             <td name="td_priceunit" class="text-end">
                                                 <span t-field="line.price_unit">3</span>
                                             </td>
                                             <td t-if="display_discount" class="text-end">
-<!--                                                <span t-field="line.discount">-</span>-->
                                                 <span t-esc="'%.2f'%(line.discount)">-</span>
                                             </td>
-<!--                                            <td name="td_taxes" class="text-end">-->
-<!--                                                <span t-out="', '.join(map(lambda x: (x.description or x.name), line.tax_id))">-->
-<!--                                                    Tax 15%-->
-<!--                                                </span>-->
-<!--                                            </td>-->
                                             <td t-if="not line.is_downpayment" name="td_subtotal" class="text-end o_price_total">
                                                 <span t-field="line.price_subtotal">27.00</span>
                                             </td>
@@ -133,25 +124,15 @@
                                     <t t-if="current_section and (line_last or doc.order_line[line_index+1].display_type == 'line_section') and not line.is_downpayment">
                                         <tr class="is-subtotal text-end">
                                             <td name="td_section_subtotal" colspan="99">
-                                                <strong class="mr16">Subtotal</strong>
-                                                <span t-out="current_subtotal" t-options="{&quot;widget&quot;: &quot;monetary&quot;, &quot;display_currency&quot;: doc.currency_id}">31.05</span>
+                                                <strong class="me-4">Subtotal</strong>
+                                                <span t-out="current_subtotal" t-options='{"widget": "monetary", "display_currency": doc.currency_id}'>31.05</span>
                                             </td>
                                         </tr>
                                     </t>
                                 </t>
                             </tbody>
                         </table>
-<!--                        <div class="clearfix" name="so_total_summary">-->
-<!--                            <div id="total" class="row" name="total">-->
-<!--                                <div t-attf-class="#{'col-6' if report_type != 'html' else 'col-sm-7 col-md-6'} ms-auto">-->
-<!--                                    <table class="table table-sm table-borderless">-->
-<!--                                        &lt;!&ndash; Tax totals &ndash;&gt;-->
-<!--                                        <t t-set="tax_totals" t-value="doc.tax_totals"/>-->
-<!--                                        <t t-call="sale.document_tax_totals"/>-->
-<!--                                    </table>-->
-<!--                                </div>-->
-<!--                            </div>-->
-<!--                        </div>-->
+                        
                         <div class="clearfix">
                             <div class="row" style="page-break-inside:avoid;">
                                  <div class="col-3">
@@ -188,7 +169,6 @@
                       <div class="row" style="page-break-inside:avoid;">
                           <div class="col-4">
                                 <table class="table mt-4">
-<!--                                <table class="table table-sm o_main_table table-borderless mt-4">-->
                                     <tr>
                                         <td>Prepared By</td>
                                         <td>Approved By</td>
@@ -205,31 +185,7 @@
                           </div>
                           <div class="col-8"/>
                       </div>
-
-<!--                        <div t-if="not doc.signature" class="oe_structure"/>-->
-<!--                        <div t-else="" class="mt-4 ml64 mr4" name="signature">-->
-<!--                            <div class="offset-8">-->
-<!--                                <strong>Signature</strong>-->
-<!--                            </div>-->
-<!--                            <div class="offset-8">-->
-<!--                                <img t-att-src="image_data_uri(doc.signature)" style="max-height: 4cm; max-width: 8cm;"/>-->
-<!--                            </div>-->
-<!--                            <div class="offset-8 text-center">-->
-<!--                                <span t-field="doc.signed_by">Oscar Morgan</span>-->
-<!--                            </div>-->
-<!--                        </div>-->
-<!--                        <div>-->
-<!--                            <span t-field="doc.note" name="order_note"/>-->
-<!--                            <p t-if="not is_html_empty(doc.payment_term_id.note)">-->
-<!--                                <span t-field="doc.payment_term_id.note">The payment should also be transmitted with love</span>-->
-<!--                            </p>-->
-<!--                            <p t-if="doc.fiscal_position_id and not is_html_empty(doc.fiscal_position_id.sudo().note)" id="fiscal_position_remark">-->
-<!--                                <strong>Fiscal Position Remark:</strong>-->
-<!--                                <span t-field="doc.fiscal_position_id.sudo().note">No further requirements for this payment</span>-->
-<!--                            </p>-->
-<!--                        </div>-->
                     </div>
-<!--                    END PAGE-->
                 </t>
             </t>
         </t>
